--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -7586,12 +7586,12 @@ body.image-bg .wrapper {
 }
 
 .sub-category-item >a{
-    background-color: #d8373e!important;
+    /* background-color: #d8373e!important; */
     border-radius: 0px!important;
 }
 
 .sub-category-item{
-    border-style: ridge!important;
+    /* border-style: ridge!important; */
     padding: 0px!important;
 }
 
@@ -7611,8 +7611,8 @@ body.image-bg .wrapper {
 }
 
 .category-mega-menu{
-    padding: 1px!important;
-    border-style: ridge;
+    padding: 10px!important;
+    border: 1px solid #d9d9d9;
 }
 
 .review-section{
@@ -7620,4 +7620,88 @@ body.image-bg .wrapper {
     overflow-y:scroll;
     width:100%;
     padding: 0px 20px;
+}
+
+.mini-wishlist-btn{
+    position: relative;
+}
+
+.mini-wishlist-btn >i{
+    font-size: 16px;
+}
+
+
+    
+.wishlist-notification{
+    color: #ffffff;
+    position: absolute;
+    border-radius: 50%;
+    display: block;
+    background-color: #d8373e;
+    -webkit-transition: all 0.4s ease-out;
+    -moz-transition: all 0.4s ease-out;
+    -o-transition: all 0.4s ease-out;
+    transition: all 0.4s ease-out;
+    width: 16px;
+    height: 16px;
+    line-height: 16px;
+    text-align: center;
+    font-size: 12px;
+    top: -4px;
+    right: -15px;
+}
+
+
+.home-wishlist-btn{
+    background: transparent;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+.quick-view-button-area >a{
+    width: 80%!important;
+    overflow: hidden!important;
+    display: flex!important;
+    align-items: center!important;
+    justify-content: space-around!important;
+}
+
+.quick-view-button-area >a >button{
+    background: transparent!important;
+    border: none!important;
+    display: flex!important;
+    color: #FFF!important;
+    font-size: large!important;
+    cursor: pointer!important;
+}
+
+.quick-view-button-area >a >button >i{
+    background-color: transparent!important;
+}
+
+
+.cart-table-header{
+    white-space:inherit!important;
+}
+
+
+.cart-table-header >tbody >tr >td >.nice-select {
+    width: 120px!important;    
+}
+
+.loading-effect{
+    position: relative;
+    display: none;
+}
+
+.loading-effect >img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    z-index: 999;
+    width: 100px;
 }
