--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -7626,7 +7626,7 @@ body.image-bg .wrapper {
     position: relative;
 }
 
-.mini-wishlist-btn >i{
+.mini-wishlist-btn a>i{
     font-size: 16px;
 }
 
@@ -7690,18 +7690,37 @@ body.image-bg .wrapper {
     width: 120px!important;    
 }
 
+/* .loading-effect{
+    position: relative;
+    display: none;
+    background-image: url('http://127.0.0.1:8000/frontend/img/loading.gif');
+} */
+
 .loading-effect{
     position: relative;
     display: none;
 }
 
-.loading-effect >img{
-    position: absolute;
+.loading-effect >h2{
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
-    margin: auto;
+    margin: auto;    
+    width: 100%;
+    height: 100%;
     z-index: 999;
-    width: 100px;
+    background: url('http://127.0.0.1:8000/frontend/img/loading.gif') 50% 50% no-repeat rgba(15, 10, 10, 59%) ;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 150px;    
 }
+
+/* Paginator css */
+.active >.page-link{
+    background-color: #d8373e !important;
+    border: 1px solid #d8373e!important;
+
+}
+
