--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -7724,3 +7724,9 @@ body.image-bg .wrapper {
 
 }
 
+.client-img >img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%!important;
+    object-fit: cover;
+}
