--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -7730,3 +7730,25 @@ body.image-bg .wrapper {
     border-radius: 50%!important;
     object-fit: cover;
 }
+
+
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+	background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+	background: #131039; 
+	border-radius: 3px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+	background: #555; 
+  }
