--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -4204,3 +4204,25 @@ table.table-inbox tbody tr.checked {
 	border-bottom: 1px solid #e9e9e9;
 	padding: 15px 0px;
 }
+
+
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+	background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+	background: #131039; 
+	border-radius: 3px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+	background: #555; 
+  }
